--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@lblod/ember-rdfa-editor-citaten-plugin": "0.13.2",
     "@lblod/ember-rdfa-editor-import-snippet-plugin": "0.7.4",
     "@lblod/ember-rdfa-editor-standard-template-plugin": "~0.9.0",
-    "@lblod/ember-rdfa-editor-template-variable-plugin": "lblod/ember-rdfa-editor-template-variable-plugin",
+    "@lblod/ember-rdfa-editor-template-variable-plugin": "^0.0.1",
     "@lblod/ember-rdfa-editor-roadsign-regulation-plugin": "^0.0.2",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
