--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "@lblod/ember-acmidm-login": "^1.2.0",
     "@lblod/ember-mock-login": "0.5.0",
     "@lblod/ember-rdfa-editor": "^0.50.0-beta.2",
+    "@lblod/ember-rdfa-editor-besluit-plugin": "0.0.2",
     "@lblod/ember-rdfa-editor-besluit-type-plugin": "0.4.0",
     "@lblod/ember-rdfa-editor-citaten-plugin": "0.13.2",
     "@lblod/ember-rdfa-editor-import-snippet-plugin": "0.7.4",
+    "@lblod/ember-rdfa-editor-roadsign-regulation-plugin": "^0.0.3",
     "@lblod/ember-rdfa-editor-standard-template-plugin": "~0.9.0",
     "@lblod/ember-rdfa-editor-template-variable-plugin": "^0.0.1",
     "@lblod/ember-rdfa-editor-roadsign-regulation-plugin": "^0.1.0",
