--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
     "ember-cli-deploy-ssh-index": "^1.0.0",
     "ember-cli-htmlbars": "^5.3.1",
     "ember-cli-inject-live-reload": "^2.0.2",
-    "ember-cli-moment-shim": "^3.7.1",
     "ember-cli-sass": "^7.1.4",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-string-helpers": "^5.0.0",
@@ -82,7 +81,6 @@
     "ember-load-initializers": "^2.1.2",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-modifier": "^1.0.3",
-    "ember-moment": "^8.0.1",
     "ember-page-title": "^6.0.3",
     "ember-power-select": "^4.1.4",
     "ember-promise-helpers": "^1.0.9",
@@ -111,7 +109,6 @@
     "tracked-toolbox": "^1.2.3",
     "webpack": "^5.55.1"
   },
-  "dependencies": {},
   "engines": {
     "node": "10.* || >= 12"
   },
@@ -126,5 +123,8 @@
     "last 1 Safari version",
     "last 1 iOS version",
     "last 1 Edge version"
-  ]
+  ],
+  "dependencies": {
+    "date-fns": "^2.28.0"
+  }
 }
