--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@lblod/ember-mock-login": "0.5.0",
     "@lblod/ember-rdfa-editor": "^0.49.0",
     "@lblod/ember-rdfa-editor-besluit-type-plugin": "0.4.0",
-    "@lblod/ember-rdfa-editor-citaten-plugin": "0.13.2",
+    "@lblod/ember-rdfa-editor-citaten-plugin": "0.13.4",
     "@lblod/ember-rdfa-editor-document-title-plugin": "0.2.0",
     "@lblod/ember-rdfa-editor-generic-model-plugin": "0.3.0",
     "@lblod/ember-rdfa-editor-import-snippet-plugin": "0.7.4",
@@ -63,7 +63,6 @@
     "ember-cli-deploy-ssh-index": "^1.0.0",
     "ember-cli-htmlbars": "^5.3.1",
     "ember-cli-inject-live-reload": "^2.0.2",
-    "ember-cli-moment-shim": "^3.7.1",
     "ember-cli-sass": "^7.1.4",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-string-helpers": "^5.0.0",
@@ -82,7 +81,6 @@
     "ember-load-initializers": "^2.1.2",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-modifier": "^1.0.3",
-    "ember-moment": "^8.0.1",
     "ember-page-title": "^6.0.3",
     "ember-power-select": "^4.1.4",
     "ember-promise-helpers": "^1.0.9",
@@ -109,9 +107,9 @@
     "release-it-lerna-changelog": "^3.1.0",
     "tracked-built-ins": "^1.0.2",
     "tracked-toolbox": "^1.2.3",
-    "webpack": "^5.55.1"
+    "webpack": "^5.55.1",
+    "date-fns": "^2.28.0"
   },
-  "dependencies": {},
   "engines": {
     "node": "10.* || >= 12"
   },
