--- a/package.json
+++ b/package.json
@@ -30,29 +30,31 @@
     "@appuniversum/ember-appuniversum": "0.7.0",
     "@ember/optional-features": "^2.0.0",
     "@ember/render-modifiers": "^1.0.2",
-    "@ember/test-helpers": "^2.1.4",
+    "@ember/test-helpers": "^2.6.0",
     "@glimmer/component": "^1.0.3",
     "@glimmer/tracking": "^1.0.3",
     "@lblod/ember-acmidm-login": "^1.2.0",
     "@lblod/ember-mock-login": "0.5.0",
-    "@lblod/ember-rdfa-editor": "^0.49.0",
-    "@lblod/ember-rdfa-editor-besluit-type-plugin": "0.4.0",
+    "@lblod/ember-rdfa-editor": "^0.50.0-beta.4",
+    "@lblod/ember-rdfa-editor-besluit-plugin": "^0.1.1",
+    "@lblod/ember-rdfa-editor-besluit-type-plugin": "~0.5.0",
     "@lblod/ember-rdfa-editor-citaten-plugin": "0.13.4",
-    "@lblod/ember-rdfa-editor-document-title-plugin": "0.2.0",
-    "@lblod/ember-rdfa-editor-generic-model-plugin": "0.3.0",
     "@lblod/ember-rdfa-editor-import-snippet-plugin": "0.7.4",
-    "@lblod/ember-rdfa-editor-roadsign-hint-plugin": "^0.5.0",
+    "@lblod/ember-rdfa-editor-rdfa-date-plugin": "0.0.2",
+    "@lblod/ember-rdfa-editor-roadsign-regulation-plugin": "^0.2.1",
     "@lblod/ember-rdfa-editor-standard-template-plugin": "~0.9.0",
+    "@lblod/ember-rdfa-editor-template-variable-plugin": "^0.0.2",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
+    "date-fns": "^2.28.0",
     "ember-a11y-refocus": "^1.0.0",
-    "ember-auto-import": "^2.2.0",
+    "ember-auto-import": "^2.3.0",
     "ember-browser-update": "^0.1.0",
     "ember-cached-decorator-polyfill": "^0.1.3",
     "ember-cli": "~3.24.0",
     "ember-cli-app-version": "^4.0.0",
     "ember-cli-autoprefixer": "^1.0.0",
-    "ember-cli-babel": "^7.23.0",
+    "ember-cli-babel": "^7.26.11",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-dependency-lint": "^2.0.0",
     "ember-cli-deploy": "^1.0.2",
@@ -61,14 +63,14 @@
     "ember-cli-deploy-revision-data": "^1.0.0",
     "ember-cli-deploy-rsync": "0.0.5",
     "ember-cli-deploy-ssh-index": "^1.0.0",
-    "ember-cli-htmlbars": "^5.3.1",
+    "ember-cli-htmlbars": "^5.7.2",
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-sass": "^7.1.4",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-string-helpers": "^5.0.0",
     "ember-cli-terser": "^4.0.1",
     "ember-composable-helpers": "^4.4.1",
-    "ember-concurrency": "^2.0.2",
+    "ember-concurrency": "^2.2.0",
     "ember-config-helper": "^0.1.3",
     "ember-could-get-used-to-this": "^1.0.1",
     "ember-data": "~3.24.0",
@@ -76,15 +78,15 @@
     "ember-export-application-global": "^2.0.1",
     "ember-feature-flags": "^6.0.0",
     "ember-fetch": "^8.0.2",
-    "ember-intl": "^5.6.2",
+    "ember-intl": "^5.7.2",
     "ember-load": "0.0.17",
     "ember-load-initializers": "^2.1.2",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-modifier": "^1.0.3",
     "ember-page-title": "^6.0.3",
-    "ember-power-select": "^4.1.4",
+    "ember-power-select": "^4.1.7",
     "ember-promise-helpers": "^1.0.9",
-    "ember-qunit": "^5.1.1",
+    "ember-qunit": "^5.1.5",
     "ember-resolver": "^8.0.2",
     "ember-simple-auth": "^3.1.0",
     "ember-source": "~3.24.0",
@@ -94,21 +96,20 @@
     "ember-wormhole": "^0.5.4",
     "eslint": "^7.17.0",
     "eslint-config-prettier": "^7.1.0",
-    "eslint-plugin-ember": "^10.1.1",
+    "eslint-plugin-ember": "^10.5.8",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
     "postscribe": "^2.0.8",
-    "prettier": "^2.2.1",
-    "qunit": "^2.13.0",
+    "prettier": "^2.5.1",
+    "qunit": "^2.17.2",
     "qunit-dom": "^1.6.0",
-    "release-it": "^14.10.0",
+    "release-it": "^14.12.3",
     "release-it-lerna-changelog": "^3.1.0",
     "tracked-built-ins": "^1.0.2",
     "tracked-toolbox": "^1.2.3",
-    "webpack": "^5.55.1",
-    "date-fns": "^2.28.0"
+    "webpack": "^5.66.0"
   },
   "engines": {
     "node": "10.* || >= 12"
