--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@appuniversum/appuniversum": "^0.3.1",
     "@appuniversum/ember-appuniversum": "^0.10.0",
     "@ember/optional-features": "^2.0.0",
-    "@ember/render-modifiers": "^1.0.2",
+    "@ember/render-modifiers": "^2.0.4",
     "@ember/test-helpers": "^2.4.2",
     "@glimmer/component": "^1.0.4",
     "@glimmer/tracking": "^1.0.4",
@@ -50,18 +50,18 @@
     "ember-cached-decorator-polyfill": "^0.1.3",
     "ember-cli": "~3.28.0",
     "ember-cli-app-version": "^5.0.0",
-    "ember-cli-autoprefixer": "^1.0.0",
+    "ember-cli-autoprefixer": "^2.0.0",
     "ember-cli-babel": "^7.26.6",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-dependency-lint": "^2.0.0",
     "ember-cli-deprecation-workflow": "^1.0.1",
     "ember-cli-htmlbars": "^5.7.1",
     "ember-cli-inject-live-reload": "^2.1.0",
-    "ember-cli-sass": "^7.1.4",
+    "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "^2.1.1",
-    "ember-cli-string-helpers": "^5.0.0",
+    "ember-cli-string-helpers": "^6.1.0",
     "ember-cli-terser": "^4.0.2",
-    "ember-composable-helpers": "^4.4.1",
+    "ember-composable-helpers": "^5.0.0",
     "ember-concurrency": "^2.0.2",
     "ember-config-helper": "^0.1.3",
     "ember-could-get-used-to-this": "^1.0.1",
@@ -74,17 +74,17 @@
     "ember-load": "0.0.17",
     "ember-load-initializers": "^2.1.2",
     "ember-maybe-import-regenerator": "^1.0.0",
-    "ember-modifier": "^1.0.3",
+    "ember-modifier": "^3.1.0",
     "ember-moment": "^10.0.0",
     "ember-page-title": "^6.2.2",
-    "ember-power-select": "^4.1.4",
+    "ember-power-select": "^5.0.3",
     "ember-qunit": "^5.1.4",
     "ember-resolver": "^8.0.3",
-    "ember-simple-auth": "^3.1.0",
+    "ember-simple-auth": "^4.1.1",
     "ember-source": "~3.28.0",
     "ember-template-lint": "^3.6.0",
     "ember-truth-helpers": "^3.0.0",
-    "ember-unique-id-helper-polyfill": "^0.1.0",
+    "ember-unique-id-helper-polyfill": "^1.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-ember": "^10.5.4",
@@ -98,8 +98,9 @@
     "qunit": "^2.16.0",
     "qunit-dom": "^1.6.0",
     "release-it": "^14.10.0",
-    "release-it-lerna-changelog": "^3.1.0",
-    "tracked-built-ins": "^1.0.2",
+    "release-it-lerna-changelog": "^4.0.1",
+    "sass": "^1.49.7",
+    "tracked-built-ins": "^2.0.1",
     "tracked-toolbox": "^1.2.3",
     "webpack": "^5.68.0"
   },
@@ -119,6 +120,7 @@
     "last 1 Edge version"
   ],
   "dependencies": {
+    "broccoli-plugin": "^4.0.7",
     "moment": "^2.29.1"
   }
 }
