--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "ember-promise-helpers": "^1.0.9",
     "ember-qunit": "^5.1.5",
     "ember-resolver": "^8.0.3",
+    "ember-resources": "^4.3.1",
     "ember-simple-auth": "^4.1.1",
     "ember-source": "~3.28.0",
     "ember-template-lint": "^3.6.0",
