--- a/.drone.yml
+++ b/.drone.yml
@@ -95,3 +95,16 @@ steps:
 trigger:
   event:
     - tag
+---
+kind: secret
+name: docker_username
+data: KQnrbnlzZYPca9PuZ2uPnU6M7+S035TDonaU/v93cuH2oDILY5LCWA==
+---
+kind: secret
+name: docker_password
+data: CajrAvNIxMmsy+n/XpQ+V/A5I2NuBPd7xrZWk0Pji+K8z+/Jo8cuYSrPWa85h+uRKr/8Rhke688h2iLdeDxmZw==
+---
+kind: signature
+hmac: 847de2d00db584332d10179f0c1b547d5c51243666c948feaeee5aae484356de
+
+...
