--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "@glimmer/tracking": "^1.0.4",
     "@lblod/ember-acmidm-login": "^1.3.0",
     "@lblod/ember-mock-login": "0.6.0",
-    "@lblod/ember-rdfa-editor": "^0.50.0-beta.8",
-    "@lblod/ember-rdfa-editor-besluit-plugin": "^0.1.4",
+    "@lblod/ember-rdfa-editor": "^0.50.0",
+    "@lblod/ember-rdfa-editor-besluit-plugin": "^0.2.1",
     "@lblod/ember-rdfa-editor-besluit-type-plugin": "^0.5.2",
     "@lblod/ember-rdfa-editor-citaten-plugin": "^0.14.0",
     "@lblod/ember-rdfa-editor-import-snippet-plugin": "0.7.4",
