--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@lblod/ember-rdfa-editor": "^0.51.0",
     "@lblod/ember-rdfa-editor-besluit-plugin": "^0.2.1",
     "@lblod/ember-rdfa-editor-citaten-plugin": "^0.14.1",
-    "@lblod/ember-rdfa-editor-import-snippet-plugin": "0.7.4",
+    "@lblod/ember-rdfa-editor-import-snippet-plugin": "^0.8.0",
     "@lblod/ember-rdfa-editor-rdfa-date-plugin": "^0.0.2",
     "@lblod/ember-rdfa-editor-roadsign-regulation-plugin": "^0.7.2",
     "@lblod/ember-rdfa-editor-template-variable-plugin": "^0.4.0",
