--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend-gelinkt-notuleren",
-  "version": "2.23.1",
+  "version": "2.24.0-0",
   "private": true,
   "description": "Ember frontend of the Gelinkt Notuleren application",
   "repository": {
