--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "npm-run-all": "^4.1.5",
     "postscribe": "^2.0.8",
     "prettier": "^2.6.1",
+    "process": "^0.11.10",
     "qunit": "^2.18.1",
     "qunit-dom": "^1.6.0",
     "release-it": "^14.13.1",
