--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@lblod/ember-rdfa-editor-rdfa-date-plugin": "^0.3.0",
     "@lblod/ember-rdfa-editor-roadsign-regulation-plugin": "^0.9.0",
     "@lblod/ember-rdfa-editor-standard-template-plugin": "~0.13.0",
+    "@lblod/ember-rdfa-editor-table-of-contents-plugin": "^0.4.0",
     "@lblod/ember-rdfa-editor-template-variable-plugin": "^0.6.0",
     "@release-it-plugins/lerna-changelog": "^5.0.0",
     "babel-eslint": "^10.1.0",
