--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@lblod/ember-environment-banner": "^0.1.1",
     "@lblod/ember-mock-login": "0.6.0",
     "@lblod/ember-rdfa-editor": "^0.63.1",
+    "@lblod/ember-rdfa-editor-article-structure-plugin": "^0.3.0",
     "@lblod/ember-rdfa-editor-besluit-plugin": "^0.5.0",
     "@lblod/ember-rdfa-editor-besluit-type-plugin": "^0.9.0",
     "@lblod/ember-rdfa-editor-citaten-plugin": "^0.18.0",
