--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@glimmer/tracking": "^1.0.4",
     "@lblod/ember-acmidm-login": "^1.4.0",
     "@lblod/ember-mock-login": "0.6.0",
-    "@lblod/ember-rdfa-editor": "^0.61.0-0",
+    "@lblod/ember-rdfa-editor": "^0.61.1",
     "@lblod/ember-rdfa-editor-besluit-plugin": "^0.4.0",
     "@lblod/ember-rdfa-editor-besluit-type-plugin": "^0.8.1",
     "@lblod/ember-rdfa-editor-citaten-plugin": "^0.17.4",
