--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
     "qunit": "^2.18.1",
     "qunit-dom": "^1.6.0",
     "release-it": "^15.4.1",
-    "release-it-lerna-changelog": "^5.0.0",
+    "@release-it-plugins/lerna-changelog": "^5.0.0",
     "sass": "^1.49.9",
     "tracked-built-ins": "^2.0.1",
     "tracked-toolbox": "^1.2.3",
