--- a/package.json
+++ b/package.json
@@ -28,10 +28,7 @@
     "release": "release-it"
   },
   "devDependencies": {
-    "@appuniversum/ember-appuniversum": "^1.2.1",
-    "@codemirror/basic-setup": "^0.19.0",
-    "@codemirror/lang-html": "^0.19.3",
-    "@codemirror/lang-xml": "^0.19.2",
+    "@appuniversum/ember-appuniversum": "^1.5.0",
     "@ember/optional-features": "^2.0.0",
     "@ember/render-modifiers": "^2.0.4",
     "@ember/test-helpers": "^2.6.0",
@@ -40,15 +37,16 @@
     "@lblod/ember-acmidm-login": "^1.4.0",
     "@lblod/ember-environment-banner": "^0.1.1",
     "@lblod/ember-mock-login": "0.6.0",
-    "@lblod/ember-rdfa-editor": "^0.61.1",
-    "@lblod/ember-rdfa-editor-besluit-plugin": "^0.4.0",
-    "@lblod/ember-rdfa-editor-besluit-type-plugin": "^0.8.1",
-    "@lblod/ember-rdfa-editor-citaten-plugin": "^0.17.4",
-    "@lblod/ember-rdfa-editor-import-snippet-plugin": "^0.8.0",
-    "@lblod/ember-rdfa-editor-rdfa-date-plugin": "^0.2.1",
-    "@lblod/ember-rdfa-editor-roadsign-regulation-plugin": "^0.8.0",
-    "@lblod/ember-rdfa-editor-standard-template-plugin": "~0.12.0",
-    "@lblod/ember-rdfa-editor-template-variable-plugin": "^0.5.0",
+    "@lblod/ember-rdfa-editor": "^0.63.1",
+    "@lblod/ember-rdfa-editor-besluit-plugin": "^0.5.0",
+    "@lblod/ember-rdfa-editor-besluit-type-plugin": "^0.9.0",
+    "@lblod/ember-rdfa-editor-citaten-plugin": "^0.18.0",
+    "@lblod/ember-rdfa-editor-import-snippet-plugin": "^0.9.0",
+    "@lblod/ember-rdfa-editor-rdfa-date-plugin": "^0.3.0",
+    "@lblod/ember-rdfa-editor-roadsign-regulation-plugin": "^0.9.0",
+    "@lblod/ember-rdfa-editor-standard-template-plugin": "~0.13.0",
+    "@lblod/ember-rdfa-editor-template-variable-plugin": "^0.6.0",
+    "@release-it-plugins/lerna-changelog": "^5.0.0",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "broccoli-plugin": "^4.0.7",
@@ -109,12 +107,10 @@
     "qunit": "^2.18.1",
     "qunit-dom": "^1.6.0",
     "release-it": "^15.4.1",
-    "@release-it-plugins/lerna-changelog": "^5.0.0",
     "sass": "^1.49.9",
     "tracked-built-ins": "^2.0.1",
     "tracked-toolbox": "^1.2.3",
-    "webpack": "^5.70.0",
-    "xml-formatter": "^2.6.1"
+    "webpack": "^5.70.0"
   },
   "engines": {
     "node": "12.* || 14.* || >= 16"
