--- a/package.json
+++ b/package.json
@@ -113,7 +113,8 @@
     "sass": "^1.49.9",
     "tracked-built-ins": "^2.0.1",
     "tracked-toolbox": "^1.2.3",
-    "webpack": "^5.70.0"
+    "webpack": "^5.70.0",
+    "uuid": "^8.3.2"
   },
   "engines": {
     "node": "12.* || 14.* || >= 16"
