--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "ember-config-helper": "^0.1.3",
     "ember-could-get-used-to-this": "^1.0.1",
     "ember-data": "~3.27.1",
+    "ember-data-resources": "^4.0.4",
     "ember-drag-drop": "^0.8.2",
     "ember-export-application-global": "^2.0.1",
     "ember-feature-flags": "^6.0.0",
