--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "ember-export-application-global": "^2.0.1",
     "ember-feature-flags": "^6.0.0",
     "ember-fetch": "^8.1.1",
+    "ember-functions-as-helper-polyfill": "^2.1.1",
     "ember-intl": "^5.7.2",
     "ember-load": "0.0.17",
     "ember-load-initializers": "^2.1.2",
