--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@lblod/ember-acmidm-login": "^1.4.0",
     "@lblod/ember-environment-banner": "^0.1.1",
     "@lblod/ember-mock-login": "0.6.0",
-    "@lblod/ember-rdfa-editor": "^0.63.7",
+    "@lblod/ember-rdfa-editor": "github:lblod/ember-rdfa-editor#feature/inline-components-serializable-attributes",
     "@lblod/ember-rdfa-editor-article-structure-plugin": "^0.3.0",
     "@lblod/ember-rdfa-editor-besluit-plugin": "^0.5.7",
     "@lblod/ember-rdfa-editor-besluit-type-plugin": "^0.9.1",
@@ -47,7 +47,7 @@
     "@lblod/ember-rdfa-editor-rdfa-date-plugin": "^0.3.1",
     "@lblod/ember-rdfa-editor-roadsign-regulation-plugin": "^0.9.3",
     "@lblod/ember-rdfa-editor-standard-template-plugin": "^0.13.1",
-    "@lblod/ember-rdfa-editor-table-of-contents-plugin": "^0.4.3",
+    "@lblod/ember-rdfa-editor-table-of-contents-plugin": "github:lblod/ember-rdfa-editor-table-of-contents-plugin#feature/update-to-new-property-model",
     "@lblod/ember-rdfa-editor-template-variable-plugin": "^0.10.0",
     "@release-it-plugins/lerna-changelog": "^5.0.0",
     "babel-eslint": "^10.1.0",
