--- a/package.json
+++ b/package.json
@@ -38,10 +38,8 @@
     "@lblod/ember-acmidm-login": "^1.4.0",
     "@lblod/ember-environment-banner": "^0.1.1",
     "@lblod/ember-mock-login": "0.6.0",
-    "@lblod/ember-rdfa-editor": "^0.64.0",
-    "@lblod/ember-rdfa-editor-article-structure-plugin": "^0.4.1",
-    "@lblod/ember-rdfa-editor-besluit-plugin": "^0.5.7",
-    "@lblod/ember-rdfa-editor-lblod-plugins": "^0.4.0",
+    "@lblod/ember-rdfa-editor": "^1.0.0-alpha.8",
+    "@lblod/ember-rdfa-editor-lblod-plugins": "^0.4.1",
     "@release-it-plugins/lerna-changelog": "^5.0.0",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
@@ -65,7 +63,7 @@
     "ember-cli-string-helpers": "^6.1.0",
     "ember-cli-terser": "^4.0.2",
     "ember-composable-helpers": "^5.0.0",
-    "ember-concurrency": "^2.2.1",
+    "ember-concurrency": "^2.3.7",
     "ember-config-helper": "^0.1.3",
     "ember-could-get-used-to-this": "^1.0.1",
     "ember-data": "~3.27.1",
@@ -107,7 +105,7 @@
     "sass": "^1.49.9",
     "tracked-built-ins": "^2.0.1",
     "tracked-toolbox": "^1.2.3",
-    "uuid": "^8.3.2",
+    "uuid": "^9.0.0",
     "webpack": "^5.70.0"
   },
   "engines": {
