--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "postscribe": "^2.0.8",
     "prettier": "^2.6.1",
     "process": "^0.11.10",
+    "prosemirror-dev-tools": "^4.0.0",
     "qunit": "^2.18.1",
     "qunit-dom": "^1.6.0",
     "release-it": "^15.4.1",
