--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "@lblod/ember-acmidm-login": "^1.4.0",
     "@lblod/ember-environment-banner": "^0.1.1",
     "@lblod/ember-mock-login": "0.6.0",
-    "@lblod/ember-rdfa-editor": "^1.0.0",
-    "@lblod/ember-rdfa-editor-lblod-plugins": "^1.0.0-beta.8",
+    "@lblod/ember-rdfa-editor": "^2.0.1",
+    "@lblod/ember-rdfa-editor-lblod-plugins": "^2.0.1",
     "@release-it-plugins/lerna-changelog": "^5.0.0",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
