upgrade to ember-acmidm 2.0.0-beta.1 with switch-login disabled

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@ember/test-helpers": "^2.6.0",
     "@glimmer/component": "^1.0.4",
     "@glimmer/tracking": "^1.0.4",
-    "@lblod/ember-acmidm-login": "^1.4.0",
+    "@lblod/ember-acmidm-login": "^2.0.0-beta.1",
     "@lblod/ember-environment-banner": "^0.2.0",
     "@lblod/ember-mock-login": "0.6.0",
     "@lblod/ember-rdfa-editor": "^3.6.0",
@@ -84,7 +84,7 @@
     "ember-promise-helpers": "^2.0.0",
     "ember-qunit": "^5.1.5",
     "ember-resolver": "^8.0.3",
-    "ember-simple-auth": "^4.2.1",
+    "ember-simple-auth": "^4.2.2",
     "ember-source": "~3.28.0",
     "ember-template-lint": "^3.6.0",
     "ember-truth-helpers": "^3.0.0",
