--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "ember-promise-helpers": "^2.0.0",
     "ember-qunit": "^5.1.5",
     "ember-resolver": "^8.0.3",
+    "ember-router-service-refresh-polyfill": "^1.1.0",
     "ember-simple-auth": "^4.2.1",
     "ember-source": "~3.28.0",
     "ember-template-lint": "^3.6.0",
