--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "ember-could-get-used-to-this": "^1.0.1",
     "ember-data": "~4.8.8",
     "ember-data-resources": "^4.0.4",
-    "ember-drag-drop": "^0.8.2",
+    "ember-drag-drop": "^0.9.0-beta.0",
     "ember-feature-flags": "^6.0.0",
     "ember-fetch": "^8.1.2",
     "ember-intl": "^5.7.2",
