--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   },
   "devDependencies": {
     "@appuniversum/ember-appuniversum": "^2.4.0",
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/plugin-proposal-decorators": "^7.20.13",
     "@ember/optional-features": "^2.0.0",
     "@ember/render-modifiers": "^2.0.4",
     "@ember/test-helpers": "^2.8.1",
@@ -41,7 +43,6 @@
     "@lblod/ember-rdfa-editor": "^3.7.2",
     "@lblod/ember-rdfa-editor-lblod-plugins": "^7.1.0",
     "@release-it-plugins/lerna-changelog": "^5.0.0",
-    "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "broccoli-plugin": "^4.0.7",
     "buffer": "^6.0.3",
