--- a/.woodpecker/.test-pr.yml
+++ b/.woodpecker/.test-pr.yml
@@ -1,21 +1,21 @@
 steps:
   install:
-    image: danlynn/ember-cli:3.28.5-node_16.13
+    image: danlynn/ember-cli:4.8.0
     commands:
       - npm ci
   lint:
-    image: danlynn/ember-cli:3.28.5-node_16.13
+    image: danlynn/ember-cli:4.8.0
     group: lint
     commands:
       - npm run lint
   dependency-lint:
-    image: danlynn/ember-cli:3.28.5-node_16.13
+    image: danlynn/ember-cli:4.8.0
     group: lint
     commands:
       - ember dependency-lint
     failure: ignore
   test:
-    image: danlynn/ember-cli:3.28.5-node_16.13
+    image: danlynn/ember-cli:4.8.0
     commands:
       - npm run test:ember
     failure: ignore
