--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@appuniversum/ember-appuniversum": "^2.12.0",
     "@babel/eslint-parser": "^7.22.9",
     "@babel/plugin-proposal-decorators": "^7.22.5",
+    "@changesets/changelog-github": "^0.4.8",
+    "@changesets/cli": "^2.26.2",
     "@ember/optional-features": "^2.0.0",
     "@ember/render-modifiers": "^2.1.0",
     "@ember/test-helpers": "^2.8.1",
@@ -46,6 +48,7 @@
     "broccoli-asset-rev": "^3.0.0",
     "broccoli-plugin": "^4.0.7",
     "buffer": "^6.0.3",
+    "changesets-release-it-plugin": "^0.1.1",
     "date-fns": "^2.28.0",
     "ember-a11y-refocus": "^3.0.0",
     "ember-auto-import": "^2.4.3",
